--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.1.1",
     "react-router-dom": "^6.8.1",
     "sass": "^1.58.3"
   },
